--- a/pleasure/css/pleasure.css
+++ b/pleasure/css/pleasure.css
@@ -5,11 +5,6 @@
     height: auto;
 }
 
-section{
-    width: 100%;
-    height: auto;
-}
-
 /*header 시작*/
 
 .header{
@@ -26,27 +21,206 @@ section{
     top: 30px;
 }
 
-/*sectionPart1 시작*/
+/*.section1 시작*/
 
-.sectionPart1{
-    width: 1200px;
+.section1{
+    width: 100%;
     height: auto;
-    margin: 0 auto;
-    position: relative;
-    top: 430px;
+
 }
 
-section .sectionPart1>ul>li.one{
+.content{
+    margin: 0 auto;
+    position: relative;
+}
+
+.section1 .content{
+    width: 1200px;
+    height: 1450px;
+    margin-top: 436px;
+}
+
+.section1 .content .list1{
     width: 500px;
     height: 300px;
     border: 1px solid;
+    position: absolute;
+    top: 130px;
 }
 
+.section1 .content .list2{
+    width: 500px;
+    height: 600px;
+    border: 1px solid;
+    position: absolute;
+    right: 0;
+}
 
+.section1 .content .list3{
+    width: 1200px;
+    height: 400px;
+    border: 1px solid;
+    position: absolute;
+    top:820px;
+    right: 0;
+}
 
+/*.section2 시작*/
 
+.section2{
+    width: 100%;
+    height: auto;
+    background: #f2f2f2;
+}
 
+.section2 .content{
+    width: 1200px;
+    height: 3250px;
+    left: 0px;
+}
 
+.section2 .content .list1{
+    width: 500px;
+    height: 600px;
+    border: 1px solid;
+    position: absolute;
+    left: 0px;
+    top: 130px;
+}
+
+.section2 .content .list2{
+    width: 500px;
+    height: 300px;
+    border: 1px solid;
+    position: absolute;
+    top: 260px;
+    right: 0;
+}
+
+.section2 .content .list3{
+    width: 500px;
+    height: 300px;
+    border: 1px solid;
+    position: absolute;
+    left: 0px;
+    top: 1080px;
+}
+
+.section2 .content .list4{
+    width: 500px;
+    height: 600px;
+    border: 1px solid;
+    position: absolute;
+    top: 910px;
+    right: 0;
+}
+
+.section2 .content .list5{
+    width: 500px;
+    height: 600px;
+    border: 1px solid;
+    position: absolute;
+    left: 0px;
+    top: 1730px;
+}
+
+.section2 .content .list6{
+    width: 500px;
+    height: 300px;
+    border: 1px solid;
+    position: absolute;
+    top: 1860px;
+    right: 0;
+}
+
+.section2 .content .list7{
+    width: 1200px;
+    height: 400px;
+    border: 1px solid;
+    position: absolute;
+    top: 2680px;
+    left: 0;
+}
+
+/*.section3 시작*/
+
+.section3{
+    width: 100%;
+    height: auto;
+}
+
+.section3 .content{
+    width: 1200px;
+    height: 850px;
+    position: relative;
+    top: 130px;
+}
+
+.section3 .content .list1{
+    width: 220px;
+    height: 270px;
+    border: 1px solid;
+    position: absolute;
+    top: 155px;
+}
+
+.section3 .content .list2{
+    width: 470px;
+    height: 580px;
+    border: 1px solid;
+    position: absolute;
+    left: 300px;
+}
+
+.section3 .content .list3{
+    width: 265px;
+    height: 150px;
+    border: 1px solid;
+    position: absolute;
+    top: 215px;
+    right: 0px;
+}
+
+.section4{
+    width: 100%;
+    height: auto;
+    background: #fef5ef;
+}
+
+.section4 .content{
+    width: 1200px;
+    height: 610px;
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+.section4 .content .list1{
+    width: 330px;
+    height: 380px;
+    border: 1px solid;
+    position: absolute;
+    top: 130px;
+    left: 0;
+}
+
+.section4 .content .list2{
+    width: 350px;
+    height: 240px;
+    border: 1px solid;
+    position: absolute;
+    top: 130px;
+    left: 425px;
+}
+
+.section4 .content .list3{
+    width: 330px;
+    height: 380px;
+    border: 1px solid;
+    position: absolute;
+    top: 130px;
+    right: 0;
+}
 
 
 
