--- a/pleasure/css/pleasure.css
+++ b/pleasure/css/pleasure.css
@@ -32,6 +32,19 @@
 .content{
     margin: 0 auto;
     position: relative;
+    text-align: center;
+}
+
+.content h1{
+    margin-top: 20px;
+    color: #333333;
+}
+
+.content p{
+    font-size: 14px;
+    line-height: 20px;
+    margin-top: 20px;
+    color: #4f4f4f;
 }
 
 .section1 .content{
@@ -42,10 +55,11 @@
 
 .section1 .content .list1{
     width: 500px;
-    height: 300px;
+    height: auto;
     border: 1px solid;
     position: absolute;
     top: 130px;
+    text-align: center;
 }
 
 .section1 .content .list2{
@@ -177,13 +191,15 @@
     height: 150px;
     border: 1px solid;
     position: absolute;
-    top: 215px;
+    top: 195px;
     right: 0px;
 }
 
+/*.section4 시작*/
+
 .section4{
     width: 100%;
-    height: auto;
+    height: 740px;
     background: #fef5ef;
 }
 
