--- a/pleasure/css/pleasure.css
+++ b/pleasure/css/pleasure.css
@@ -56,16 +56,16 @@
 .section1 .content .list1{
     width: 500px;
     height: auto;
-    border: 1px solid;
+/*    border: 1px solid;*/
     position: absolute;
     top: 130px;
     text-align: center;
 }
 
 .section1 .content .list2{
-    width: 500px;
-    height: 600px;
-    border: 1px solid;
+    width: auto;
+    height: auto;
+/*    border: 1px solid;*/
     position: absolute;
     right: 0;
 }
@@ -73,10 +73,19 @@
 .section1 .content .list3{
     width: 1200px;
     height: 400px;
-    border: 1px solid;
+/*    border: 1px solid;*/
     position: absolute;
     top:820px;
     right: 0;
+}
+
+.content img{
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, .2);
+}
+
+.content img:hover{
+    cursor: pointer;
+    transform: scale(1.03);
 }
 
 /*.section2 시작*/
@@ -96,7 +105,7 @@
 .section2 .content .list1{
     width: 500px;
     height: 600px;
-    border: 1px solid;
+/*    border: 1px solid;*/
     position: absolute;
     left: 0px;
     top: 130px;
@@ -105,7 +114,7 @@
 .section2 .content .list2{
     width: 500px;
     height: 300px;
-    border: 1px solid;
+/*    border: 1px solid;*/
     position: absolute;
     top: 260px;
     right: 0;
@@ -114,7 +123,7 @@
 .section2 .content .list3{
     width: 500px;
     height: 300px;
-    border: 1px solid;
+/*    border: 1px solid;*/
     position: absolute;
     left: 0px;
     top: 1080px;
@@ -123,7 +132,7 @@
 .section2 .content .list4{
     width: 500px;
     height: 600px;
-    border: 1px solid;
+/*    border: 1px solid;*/
     position: absolute;
     top: 910px;
     right: 0;
@@ -132,7 +141,7 @@
 .section2 .content .list5{
     width: 500px;
     height: 600px;
-    border: 1px solid;
+/*    border: 1px solid;*/
     position: absolute;
     left: 0px;
     top: 1730px;
@@ -141,7 +150,7 @@
 .section2 .content .list6{
     width: 500px;
     height: 300px;
-    border: 1px solid;
+/*    border: 1px solid;*/
     position: absolute;
     top: 1860px;
     right: 0;
@@ -150,7 +159,7 @@
 .section2 .content .list7{
     width: 1200px;
     height: 400px;
-    border: 1px solid;
+/*    border: 1px solid;*/
     position: absolute;
     top: 2680px;
     left: 0;
@@ -173,7 +182,7 @@
 .section3 .content .list1{
     width: 220px;
     height: 270px;
-    border: 1px solid;
+/*    border: 1px solid;*/
     position: absolute;
     top: 155px;
 }
@@ -181,19 +190,20 @@
 .section3 .content .list2{
     width: 470px;
     height: 580px;
-    border: 1px solid;
+/*    border: 1px solid;*/
     position: absolute;
     left: 300px;
 }
 
 .section3 .content .list3{
-    width: 265px;
-    height: 150px;
-    border: 1px solid;
+    width: 400px;
+    height: auto;
+/*    border: 1px solid;*/
     position: absolute;
     top: 195px;
     right: 0px;
 }
+
 
 /*.section4 시작*/
 
@@ -214,7 +224,7 @@
 .section4 .content .list1{
     width: 330px;
     height: 380px;
-    border: 1px solid;
+/*    border: 1px solid;*/
     position: absolute;
     top: 130px;
     left: 0;
@@ -223,7 +233,7 @@
 .section4 .content .list2{
     width: 350px;
     height: 240px;
-    border: 1px solid;
+/*    border: 1px solid;*/
     position: absolute;
     top: 130px;
     left: 425px;
@@ -232,7 +242,7 @@
 .section4 .content .list3{
     width: 330px;
     height: 380px;
-    border: 1px solid;
+/*    border: 1px solid;*/
     position: absolute;
     top: 130px;
     right: 0;
