--- a/pleasure-remak/css/pleasure.css
+++ b/pleasure-remak/css/pleasure.css
@@ -62,8 +62,9 @@
     height: auto;
 /*    border: 1px solid;*/
     position: absolute;
-    top: 130px;
+    top: 180px;
     text-align: center;
+    display: none;
 }
 
 .section1 .content .list2{
@@ -71,7 +72,9 @@
     height: auto;
 /*    border: 1px solid;*/
     position: absolute;
+    top: 50px;
     right: 0;
+    display: none;
 }
 
 .section1 .content .list3{
@@ -84,6 +87,7 @@
     background: url(../img/div_03_img_01.jpg) no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    display: none;
 }
 
 .section1 .content .list3 h1{
@@ -92,12 +96,13 @@
 
 
 .content img{
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, .2);
+    
 }
 
 .content img:hover{
     cursor: pointer;
-    transform: scale(1.03);
+    box-shadow:  5px 5px 20px rgba(0, 0, 0, .5);
+    transition: all 0.5s;
 }
 
 /*.section2 시작*/
@@ -120,7 +125,9 @@
 /*    border: 1px solid;*/
     position: absolute;
     left: 0px;
-    top: 130px;
+    top: 180px;
+    display: none;
+   
 }
 
 .section2 .content .list2{
@@ -128,8 +135,9 @@
     height: 300px;
 /*    border: 1px solid;*/
     position: absolute;
-    top: 260px;
+    top: 310px;
     right: 0;
+    display: none;
 }
 
 .section2 .content .list3{
@@ -138,7 +146,8 @@
 /*    border: 1px solid;*/
     position: absolute;
     left: 0px;
-    top: 1080px;
+    top: 1130px;
+    display: none;
 }
 
 .section2 .content .list4{
@@ -146,8 +155,9 @@
     height: 600px;
 /*    border: 1px solid;*/
     position: absolute;
-    top: 910px;
+    top: 960px;
     right: 0;
+    display: none;
 }
 
 .section2 .content .list5{
@@ -156,7 +166,8 @@
 /*    border: 1px solid;*/
     position: absolute;
     left: 0px;
-    top: 1730px;
+    top: 1780px;
+    display: none;
 }
 
 .section2 .content .list6{
@@ -164,8 +175,9 @@
     height: 300px;
 /*    border: 1px solid;*/
     position: absolute;
-    top: 1860px;
+    top: 1910px;
     right: 0;
+    display: none;
 }
 
 .section2 .content .list7{
@@ -173,8 +185,9 @@
     height: 400px;
 /*    border: 1px solid;*/
     position: absolute;
-    top: 2610px;
+    top: 2660px;
     left: 0;
+    display: none;
 }
 
 
@@ -193,7 +206,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-
+    display: none;
 }
 
 .section3 .content{
@@ -224,11 +237,12 @@
     height: auto;
 /*    border: 1px solid;*/
     position: absolute;
-    top: 395px;
+    top: 445px;
     right: 0px;
     color: #fff;
     background: rgba(0,0,0,0.3);
     padding: 20px;
+    display: none;
 }
 
 .section3 .content .list3 h1{
@@ -253,7 +267,7 @@
 .section4{
     width: 100%;
     height: 740px;
-    background: #fef5ef;
+    background:url(../img/backbg02.jpg) no-repeat 50%;
 }
 
 .section4 .content{
@@ -269,8 +283,9 @@
     height: 380px;
 /*    border: 1px solid;*/
     position: absolute;
-    top: 130px;
+    top: 180px;
     left: 0;
+    display: none;
 }
 
 .section4 .content .list2{
@@ -278,8 +293,9 @@
     height: 240px;
 /*    border: 1px solid;*/
     position: absolute;
-    top: 130px;
+    top: 180px;
     left: 425px;
+    display: none;
 }
 
 .section4 .content .list3{
@@ -287,13 +303,18 @@
     height: 380px;
 /*    border: 1px solid;*/
     position: absolute;
-    top: 130px;
+    top: 180px;
     right: 0;
+    display: none;
 }
 
+.section4 .content h1{
+    color: #fff;
+}
 
-
-
+.section4 .content p{
+    color: #fff;
+}
 
 
 
